tests/mm0_mmu/fail/bad-sort241.mmu
-- bad modifier order
(sort s241 strict free pure)